Fixed spacing and redundancies

--- a/docs/css/code_page.css
+++ b/docs/css/code_page.css
@@ -82,7 +82,7 @@ button {
     color: var(--main-text-color);
     border: none;
     transition-duration: 0.2s;
-    padding: 5px 5px;
+    padding: 5px;
     display: inline-block;
     text-align: center;
     font-size: 11px;
